Update dependencies in requirements.txt

--- a/requirements.txt.txt
+++ b/requirements.txt.txt
@@ -1,4 +1,4 @@
-openai = 1.51.0
-streamlit = 1.39.0
-pydantic = 2.9.2
-requests = 2.32.3
+openai==1.51.0
+streamlit==1.39.0
+pydantic==2.9.2
+requests==2.32.3
